--- a/example.bib
+++ b/example.bib
@@ -1,3 +1,10 @@
+@misc{Gartner,
+    author    = "Gartner",
+    title     = "https://www.gartner.com/newsroom/id/3876865 Accessed:2018-07-18",
+    link = "https://www.gartner.com/newsroom/id/3876865",
+    Accessed     = "07-18-2018",
+}
+
 @article{Reference1,
 	Abstract = {We have developed an enhanced Littrow configuration extended cavity diode laser (ECDL) that can be tuned without changing the direction of the output beam. The output of a conventional Littrow ECDL is reflected from a plane mirror fixed parallel to the tuning diffraction grating. Using a free-space Michelson wavemeter to measure the laser wavelength, we can tune the laser over a range greater than 10 nm without any alteration of alignment.},
 	Author = {C. J. Hawthorn and K. P. Weber and R. E. Scholten},
