Changed the quotation.

--- a/example.bib
+++ b/example.bib
@@ -1,9 +1,32 @@
 @misc{Gartner,
-    author    = "Gartner",
-    title     = "https://www.gartner.com/newsroom/id/3876865 Accessed:2018-07-18",
-    link = "https://www.gartner.com/newsroom/id/3876865",
-    Accessed     = "07-18-2018",
+  title = {{Gartner} Gartner Says Worldwide Sales of Smartphones Returned to Growth in First Quarter of 2018},
+  howpublished = {\url{https://www.gartner.com/newsroom/id/3876865}},
+  note = {Accessed: 2018-07-18}
 }
+
+@misc{Statista,
+  title = {{Statista} Internet of Things - number of connected devices worldwide 2015-2025},
+  howpublished = {\url{https://www.statista.com/statistics/471264/iot-number-of-connected-devices-worldwide/}},
+  note = {Accessed: 2018-07-19}
+}
+
+@article{GPSforIndoor,
+  title={Indoor Positioning Based on Global Positioning System Signals},
+  author={Kerem Ozsoy, Ayhan Bozkurt and Ibrahim Tekin},
+  journal={},
+  volume={11},
+  number={1},
+  pages={},
+  year={2013},
+  publisher={}
+}
+
+
+
+Indoor Positioning Based on Global Positioning System Signals
+Kerem Ozsoy, Ayhan Bozkurt and Ibrahim Tekin
+Electronics Engineering, Sabanci University
+34956, Istanbul, Turkey
 
 @article{Reference1,
 	Abstract = {We have developed an enhanced Littrow configuration extended cavity diode laser (ECDL) that can be tuned without changing the direction of the output beam. The output of a conventional Littrow ECDL is reflected from a plane mirror fixed parallel to the tuning diffraction grating. Using a free-space Michelson wavemeter to measure the laser wavelength, we can tune the laser over a range greater than 10 nm without any alteration of alignment.},
