--- a/thesis.tex
+++ b/thesis.tex
@@ -70,7 +70,7 @@ headsepline, % Uncomment to get a line under the header
 \thesistitle{Indoor positioning using Raspberry Pi with UWB} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
 \supervisor{Jose \textsc{Carrera} and Zhongliang \textsc{Zhao}} % Your supervisor's name, this is used in the title page, print it elsewhere with \supname
 \examiner{} % Your examiner's name, this is not currently used anywhere in the template, print it elsewhere with \examname
-\degree{Doctor of Philosophy} % Your degree name, this is used in the title page and abstract, print it elsewhere with \degreename
+\degree{Bachelor of Science in Computer Science} % Your degree name, this is used in the title page and abstract, print it elsewhere with \degreename
 \author{Mischa \textsc{Wenger}} % Your name, this is used in the title page and abstract, print it elsewhere with \authorname
 \addresses{} % Your address, this is not currently used anywhere in the template, print it elsewhere with \addressname
 
@@ -123,8 +123,8 @@ headsepline, % Uncomment to get a line under the header
  
 \vfill
 
-\large \textit{A thesis submitted in fulfillment of the requirements\\ for the degree of \degreename}\\[0.3cm] % University requirement text
-\textit{in the}\\[0.4cm]
+\emph{Head of Research}\\[0.3cm] % University requirement text
+\large \textsc{Professor Dr. Torsten Braun}\\[0.4cm]
 \groupname\\\deptname\\[2cm] % Research group name and department name
  
 \vfill
@@ -206,8 +206,11 @@ The acknowledgments and the people to thank go here, don't forget to include you
 
 \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
 
-\textbf{LAH} & \textbf{L}ist \textbf{A}bbreviations \textbf{H}ere\\
-\textbf{WSF} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or\\
+\textbf{GPS} & \textbf{G}lobal \textbf{P}ositioning \textbf{S}ystem\\
+\textbf{IoT} & \textbf{I}nternet \textbf{o}f \textbf{T}hings\\
+\textbf{M2M} & \textbf{M}achine \textbf{2}(to) \textbf{M}achine\\
+\textbf{UWB} & \textbf{U}ltra \textbf{W}ide\textbf{B}and\\
+
 
 \end{abbreviations}
 
