Add first draft of contribution section.

--- a/thesis.tex
+++ b/thesis.tex
@@ -207,6 +207,7 @@ The acknowledgments and the people to thank go here, don't forget to include you
 \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
 
 \textbf{GPS} & \textbf{G}lobal \textbf{P}ositioning \textbf{S}ystem\\
+\textbf{IMU} & \textbf{I}nertial \textbf{M}easurement \textbf{U}nits\\
 \textbf{IoT} & \textbf{I}nternet \textbf{o}f \textbf{T}hings\\
 \textbf{M2M} & \textbf{M}achine \textbf{2}(to) \textbf{M}achine\\
 \textbf{UWB} & \textbf{U}ltra \textbf{W}ide\textbf{B}and\\
