--- a/example.bib
+++ b/example.bib
@@ -23,10 +23,16 @@
 
 
 
-Indoor Positioning Based on Global Positioning System Signals
-Kerem Ozsoy, Ayhan Bozkurt and Ibrahim Tekin
-Electronics Engineering, Sabanci University
-34956, Istanbul, Turkey
+@article{Carrera,
+  title={A Real-time Indoor Tracking System in Smartphones},
+  author={José Luis Carrera Villacrés - Zhongliang Zhao - Torsten Braun - Zan Li - Augusto Neto},
+  journal={},
+  volume={11},
+  number={2},
+  pages={},
+  year={2018},
+  publisher={}
+}
 
 @article{Reference1,
 	Abstract = {We have developed an enhanced Littrow configuration extended cavity diode laser (ECDL) that can be tuned without changing the direction of the output beam. The output of a conventional Littrow ECDL is reflected from a plane mirror fixed parallel to the tuning diffraction grating. Using a free-space Michelson wavemeter to measure the laser wavelength, we can tune the laser over a range greater than 10 nm without any alteration of alignment.},
