Two figures added:  - ranging_process  - trilateration
Add section about trilateration triangulation

--- a/example.bib
+++ b/example.bib
@@ -10,6 +10,26 @@
   note = {Accessed: 2018-07-19}
 }
 
+
+@article{thales,
+  title={The Thales experiment},
+  author={Richard Kerner},
+  journal={},
+  volume={11},
+  number={3},
+  pages={1-2},
+  year={2017},
+  publisher={Université Paris-VI},
+  Url ={https://arxiv.org/pdf/1712.06016.pdf}
+}
+
+
+The Thales experiment
+Richard KERNER∗
+∗ Address : LPTMC, Universit´e Paris-VI - CNRS UMR 7600 ,
+Tour 24, 4-`eme , Boite 121, 4 Place Jussieu, 75005 Paris, France
+Tel.: +33 1 44 27 72 98, Fax: +33 1
+
 @article{GPSforIndoor,
   title={Indoor Positioning Based on Global Positioning System Signals},
   author={Kerem Ozsoy, Ayhan Bozkurt and Ibrahim Tekin},
