Created new file Chapter3. Added Overview in chapter 1. Added RSSI Theory in chapter 2.

--- a/example.bib
+++ b/example.bib
@@ -24,11 +24,11 @@
 }
 
 
-The Thales experiment
-Richard KERNER∗
-∗ Address : LPTMC, Universit´e Paris-VI - CNRS UMR 7600 ,
-Tour 24, 4-`eme , Boite 121, 4 Place Jussieu, 75005 Paris, France
-Tel.: +33 1 44 27 72 98, Fax: +33 1
+@misc{VorlesungCN,
+  title = {{Computernetze} Vorlesungsunterlagen Uebertragungsmedien},
+  howpublished = {},
+  note = {HS: 2015}
+}
 
 @article{GPSforIndoor,
   title={Indoor Positioning Based on Global Positioning System Signals},
