Started section for RTT and ToF

--- a/thesis.tex
+++ b/thesis.tex
@@ -206,12 +206,15 @@ The acknowledgments and the people to thank go here, don't forget to include you
 
 \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
 
+\textbf{ACK} & \textbf{ACK}nowledgement\\
 \textbf{GPS} & \textbf{G}lobal \textbf{P}ositioning \textbf{S}ystem\\
 \textbf{IMU} & \textbf{I}nertial \textbf{M}easurement \textbf{U}nits\\
 \textbf{IoT} & \textbf{I}nternet \textbf{o}f \textbf{T}hings\\
 \textbf{M2M} & \textbf{M}achine \textbf{2}(to) \textbf{M}achine\\
+\textbf{RTT} & \textbf{R}ound \textbf{T}rip \textbf{T}ime\\
 \textbf{RSSI} & \textbf{R}eceived \textbf{S}ignal \textbf{S}trengh \textbf{I}ndication\\
 \textbf{TDOA} & \textbf{T}ime \textbf{D}ifference \textbf{O}f \textbf{A}rrival \\
+\textbf{ToF} & \textbf{T}ime \textbf{o}f \textbf{F}light\\
 \textbf{TWR} & \textbf{T}wo \textbf{W}ay \textbf{R}anging\\
 \textbf{UWB} & \textbf{U}ltra \textbf{W}ide\textbf{B}and\\
 
