Added figures about TWR and TDOA. Added section about TWR and TDOA.

--- a/example.bib
+++ b/example.bib
@@ -10,6 +10,17 @@
   note = {Accessed: 2018-07-19}
 }
 
+@misc{SewioTWR,
+  title = {{SewioTWR} UWB Technology - Two way ranging},
+  howpublished = {\url{https://www.sewio.net/technology/two-way-ranging/}},
+  note = {Accessed: 2018-07-23}
+}
+
+@misc{SewioTDOA,
+  title = {{SewioTDOA} UWB Technology - Time difference of arrival},
+  howpublished = {\url{https://www.sewio.net/technology/time-difference-of-arrival/}},
+  note = {Accessed: 2018-07-23}
+}
 
 @article{thales,
   title={The Thales experiment},
