--- a/thesis.tex
+++ b/thesis.tex
@@ -213,6 +213,7 @@ The acknowledgments and the people to thank go here, don't forget to include you
 \textbf{M2M} & \textbf{M}achine \textbf{2}(to) \textbf{M}achine\\
 \textbf{RTT} & \textbf{R}ound \textbf{T}rip \textbf{T}ime\\
 \textbf{RSSI} & \textbf{R}eceived \textbf{S}ignal \textbf{S}trengh \textbf{I}ndication\\
+\textbf{SDS-TWR} & \textbf{S}ymmetrical \textbf{D}ouble \textbf{S}ided - \textbf{T}wo \textbf{W}ay \textbf{R}anging\\
 \textbf{TDOA} & \textbf{T}ime \textbf{D}ifference \textbf{O}f \textbf{A}rrival \\
 \textbf{ToF} & \textbf{T}ime \textbf{o}f \textbf{F}light\\
 \textbf{TWR} & \textbf{T}wo \textbf{W}ay \textbf{R}anging\\
