TDOA Method added. Updated picture of twr with correct indications.

--- a/example.bib
+++ b/example.bib
@@ -22,6 +22,12 @@
   note = {Accessed: 2018-07-23}
 }
 
+@misc{Wikipedia,
+  title = {{Wikipedia} Symmetrical double-sided two-way ranging},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Symmetrical_double-sided_two-way_ranging}},
+  note = {Accessed: 2018-07-24}
+}
+
 @article{thales,
   title={The Thales experiment},
   author={Richard Kerner},
