Added the new chapter 4.

--- a/example.bib
+++ b/example.bib
@@ -22,6 +22,18 @@
   note = {Accessed: 2018-07-23}
 }
 
+@misc{Raspberry,
+  title = {{Raspberry Pi} Symmetrical double-sided two-way ranging},
+  howpublished = {\url{https://www.raspberrypi.org/products/raspberry-pi-3-model-b/}},
+  note = {Accessed: 2018-07-31}
+}
+
+@misc{Uniset,
+  title = {{UNISET company} Intelligent sensor technology},
+  howpublished = {\url{http://www.unisetcompany.com}},
+  note = {Accessed: 2018-07-31}
+}
+
 @misc{Wikipedia,
   title = {{Wikipedia} Symmetrical double-sided two-way ranging},
   howpublished = {\url{https://en.wikipedia.org/wiki/Symmetrical_double-sided_two-way_ranging}},
