--- a/thesis.tex
+++ b/thesis.tex
@@ -207,16 +207,20 @@ The acknowledgments and the people to thank go here, don't forget to include you
 \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
 
 \textbf{ACK} & \textbf{ACK}nowledgement\\
+\textbf{GPIO} & \textbf{G}eneral \textbf{P}urpose \textbf{I}nput \textbf{O}utput\\
 \textbf{GPS} & \textbf{G}lobal \textbf{P}ositioning \textbf{S}ystem\\
 \textbf{IMU} & \textbf{I}nertial \textbf{M}easurement \textbf{U}nits\\
 \textbf{IoT} & \textbf{I}nternet \textbf{o}f \textbf{T}hings\\
 \textbf{M2M} & \textbf{M}achine \textbf{2}(to) \textbf{M}achine\\
+\textbf{OS} & \textbf{O}perating \textbf{S}ystem\\
+\textbf{RTLS} & \textbf{R}eal \textbf{T}ime \textbf{L}ocating \textbf{S}ystem\\
 \textbf{RTT} & \textbf{R}ound \textbf{T}rip \textbf{T}ime\\
 \textbf{RSSI} & \textbf{R}eceived \textbf{S}ignal \textbf{S}trengh \textbf{I}ndication\\
 \textbf{SDS-TWR} & \textbf{S}ymmetrical \textbf{D}ouble \textbf{S}ided - \textbf{T}wo \textbf{W}ay \textbf{R}anging\\
 \textbf{TDOA} & \textbf{T}ime \textbf{D}ifference \textbf{O}f \textbf{A}rrival \\
 \textbf{ToF} & \textbf{T}ime \textbf{o}f \textbf{F}light\\
 \textbf{TWR} & \textbf{T}wo \textbf{W}ay \textbf{R}anging\\
+\textbf{UDP} & \textbf{U}ser \textbf{D}atagram\textbf{P}rotocol\\
 \textbf{UWB} & \textbf{U}ltra \textbf{W}ide\textbf{B}and\\
 
 
@@ -271,7 +275,7 @@ $\omega$ & angular frequency & \si{\radian} \\
 \include{Chapters/Chapter1}
 \include{Chapters/Chapter2} 
 \include{Chapters/Chapter3}
-%\include{Chapters/Chapter4} 
+\include{Chapters/Chapter4} 
 %\include{Chapters/Chapter5} 
 
 %----------------------------------------------------------------------------------------
