Chapter 4 with UWB Transmission and hardware specifications.

--- a/example.bib
+++ b/example.bib
@@ -40,6 +40,19 @@
   note = {Accessed: 2018-07-24}
 }
 
+
+@misc{Beginnersguide,
+  title = {{SEQUITUR InGPS Lite} Beginners Guide and Application Examples},
+  howpublished = {SeqInGPSLite BeginnersGuide R1 2 pdf},
+  note = {No note}
+}
+
+@misc{Usermanual,
+  title = {{SEQUITUR InGPS Lite} User Manual and Application Programming Interface},
+  howpublished = {SeqInGPSLite UserManual R1 1 pdf},
+  note = {No note}
+}
+
 @article{thales,
   title={The Thales experiment},
   author={Richard Kerner},
