--- a/thesis.tex
+++ b/thesis.tex
@@ -207,12 +207,18 @@ The acknowledgments and the people to thank go here, don't forget to include you
 \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
 
 \textbf{ACK} & \textbf{ACK}nowledgement\\
+gigahertz
+\textbf{GHz} & \textbf{G}iga\textbf{H}ert\textbf{Z}\\
 \textbf{GPIO} & \textbf{G}eneral \textbf{P}urpose \textbf{I}nput \textbf{O}utput\\
 \textbf{GPS} & \textbf{G}lobal \textbf{P}ositioning \textbf{S}ystem\\
 \textbf{IMU} & \textbf{I}nertial \textbf{M}easurement \textbf{U}nits\\
 \textbf{IoT} & \textbf{I}nternet \textbf{o}f \textbf{T}hings\\
+\textbf{kbps} & \textbf{k}ilo \textbf{b}it \textbf{p}er \textbf{s}econd\\
+\textbf{Mbps} & \textbf{M}ega \textbf{b}it \textbf{p}er \textbf{s}econd\\
+\textbf{MHz} & \textbf{M}ega\textbf{H}ert\textbf{Z}\\
 \textbf{M2M} & \textbf{M}achine \textbf{2}(to) \textbf{M}achine\\
 \textbf{OS} & \textbf{O}perating \textbf{S}ystem\\
+\textbf{PRF} & \textbf{P}ulse \textbf{R}epetition \textbf{F}requency\\
 \textbf{RTLS} & \textbf{R}eal \textbf{T}ime \textbf{L}ocating \textbf{S}ystem\\
 \textbf{RTT} & \textbf{R}ound \textbf{T}rip \textbf{T}ime\\
 \textbf{RSSI} & \textbf{R}eceived \textbf{S}ignal \textbf{S}trengh \textbf{I}ndication\\
