Mathematical description of inputs started.

--- a/thesis.tex
+++ b/thesis.tex
@@ -216,6 +216,7 @@ The acknowledgments and the people to thank go here, don't forget to include you
 \textbf{IoT} & \textbf{I}nternet \textbf{o}f \textbf{T}hings\\
 \textbf{kbps} & \textbf{k}ilo \textbf{b}it \textbf{p}er \textbf{s}econd\\
 \textbf{Mbps} & \textbf{M}ega \textbf{b}it \textbf{p}er \textbf{s}econd\\
+\textbf{MCL} & \textbf{M}onte \textbf{C}arlo \textbf{L}ocalization\\
 \textbf{MHz} & \textbf{M}ega\textbf{H}ert\textbf{Z}\\
 \textbf{M2M} & \textbf{M}achine \textbf{2}(to) \textbf{M}achine\\
 \textbf{OS} & \textbf{O}perating \textbf{S}ystem\\
