Changed citation style. Update of probabilities in observation phase.

--- a/example.bib
+++ b/example.bib
@@ -1,7 +1,8 @@
 @misc{Gartner,
   title = {{Gartner} Gartner Says Worldwide Sales of Smartphones Returned to Growth in First Quarter of 2018},
   howpublished = {\url{https://www.gartner.com/newsroom/id/3876865}},
-  note = {Accessed: 2018-07-18}
+  note = {Accessed: 2018-07-18},
+  number = {1}
 }
 
 @misc{Statista,
@@ -77,7 +78,7 @@
   author={Kerem Ozsoy, Ayhan Bozkurt and Ibrahim Tekin},
   journal={},
   volume={11},
-  number={1},
+  number={2},
   pages={},
   year={2013},
   publisher={}
@@ -86,13 +87,13 @@
 
 
 @article{Carrera,
-  title={A Real-time Indoor Tracking System in Smartphones},
-  author={José Luis Carrera Villacrés - Zhongliang Zhao - Torsten Braun - Zan Li - Augusto Neto},
-  journal={},
-  volume={11},
-  number={2},
+  title={A real-time robust indoor tracking system in smartphones},
+  author={J.L. Carrera V. et al.},
+  journal={Computer Communications},
+  volume={},
+  number={},
   pages={},
-  year={2018},
+  year={2017},
   publisher={}
 }
 
@@ -128,7 +129,7 @@
 	Journal = {Review of Scientific Instruments},
 	Keywords = {Diode Laser},
 	Month = {1},
-	Number = {1},
+	Number = {4},
 	Numpages = {20},
 	Pages = {1--20},
 	Title = {Using Diode Lasers for Atomic Physics},
