New figure: HMM probabilities Added chapter 4 hidden markov model (except for trans and emission probability) Added part of zone indication in chapter 3.

--- a/example.bib
+++ b/example.bib
@@ -97,6 +97,41 @@
   publisher={}
 }
 
+
+@article{Carrera2,
+  title={room recognition using discriminative ensemble learning with hidden markov models for smartphones},
+  author={J.L. Carrera V. et al.},
+  journal={},
+  volume={},
+  number={},
+  pages={},
+  year={2018},
+  publisher={}
+}
+
+@article{Markov,
+  title={Markov localization for mobile robots in dynamic environments},
+  author={F. Dieter W. Burgard and S. Thrun},
+  journal={Artificial Inteligence Research},
+  volume={11},
+  number={1},
+  pages={391-427},
+  year={1999},
+  publisher={}
+}
+
+@article{Viterbi,
+  title={The viterbi algorithm},
+  author={G. Forney},
+  journal={Proceedings of the IEEE},
+  volume={61},
+  number={},
+  pages={268-278},
+  year={1973},
+  publisher={}
+}
+
+
 @article{Reference1,
 	Abstract = {We have developed an enhanced Littrow configuration extended cavity diode laser (ECDL) that can be tuned without changing the direction of the output beam. The output of a conventional Littrow ECDL is reflected from a plane mirror fixed parallel to the tuning diffraction grating. Using a free-space Michelson wavemeter to measure the laser wavelength, we can tune the laser over a range greater than 10 nm without any alteration of alignment.},
 	Author = {C. J. Hawthorn and K. P. Weber and R. E. Scholten},
