--- a/thesis.tex
+++ b/thesis.tex
@@ -40,7 +40,7 @@ headsepline, % Uncomment to get a line under the header
 
 \usepackage[utf8]{inputenc} % Required for inputting international characters
 \usepackage[T1]{fontenc} % Output font encoding for international characters
-
+\usepackage{amsmath}
 \usepackage{mathpazo} % Use the Palatino font by default
 
 % \usepackage[backend=bibtex,style=authoryear,natbib=true]{biblatex} % Use the bibtex backend with the authoryear citation style (which resembles APA)
@@ -210,14 +210,17 @@ The acknowledgments and the people to thank go here, don't forget to include you
 \textbf{ACK} & \textbf{ACK}nowledgement\\
 \textbf{AN} & \textbf{A}nchor \textbf{N}ode\\
 \textbf{API} & \textbf{A}pplication \textbf{P}rogramming \textbf{I}nterface\\
+\textbf{CDS} & \textbf{C}ommunication \textbf{D}istributed \textbf{S}ystem\\
 \textbf{GHz} & \textbf{G}iga\textbf{H}ert\textbf{Z}\\
 \textbf{GPIO} & \textbf{G}eneral \textbf{P}urpose \textbf{I}nput \textbf{O}utput\\
 \textbf{GPS} & \textbf{G}lobal \textbf{P}ositioning \textbf{S}ystem\\
+\textbf{HMM} & \textbf{H}idden \textbf{M}arkov \textbf{M}odel\\
 \textbf{IMU} & \textbf{I}nertial \textbf{M}easurement \textbf{U}nits\\
 \textbf{IoT} & \textbf{I}nternet \textbf{o}f \textbf{T}hings\\
 \textbf{kbps} & \textbf{k}ilo \textbf{b}it \textbf{p}er \textbf{s}econd\\
 \textbf{Mbps} & \textbf{M}ega \textbf{b}it \textbf{p}er \textbf{s}econd\\
 \textbf{MCL} & \textbf{M}onte \textbf{C}arlo \textbf{L}ocalization\\
+\textbf{MF} & \textbf{M}agnetic \textbf{F}ield\\
 \textbf{MHz} & \textbf{M}ega\textbf{H}ert\textbf{Z}\\
 \textbf{M2M} & \textbf{M}achine \textbf{2}(to) \textbf{M}achine\\
 \textbf{OS} & \textbf{O}perating \textbf{S}ystem\\
