Emission probabilitiy finished

--- a/thesis.tex
+++ b/thesis.tex
@@ -222,6 +222,7 @@ The acknowledgments and the people to thank go here, don't forget to include you
 \textbf{MCL} & \textbf{M}onte \textbf{C}arlo \textbf{L}ocalization\\
 \textbf{MF} & \textbf{M}agnetic \textbf{F}ield\\
 \textbf{MHz} & \textbf{M}ega\textbf{H}ert\textbf{Z}\\
+\textbf{ML} & \textbf{M}achine \textbf{L}earning\\
 \textbf{M2M} & \textbf{M}achine \textbf{2}(to) \textbf{M}achine\\
 \textbf{OS} & \textbf{O}perating \textbf{S}ystem\\
 \textbf{PRF} & \textbf{P}ulse \textbf{R}epetition \textbf{F}requency\\
