Added zone definition figure Part of related work: Particle filter and room rec added. Minor errors fixed in typography.

--- a/example.bib
+++ b/example.bib
@@ -41,7 +41,6 @@
   note = {Accessed: 2018-07-24}
 }
 
-
 @misc{Beginnersguide,
   title = {{SEQUITUR InGPS Lite} Beginners Guide and Application Examples},
   howpublished = {SeqInGPSLite BeginnersGuide R1 2 pdf},
@@ -73,6 +72,7 @@
   note = {HS: 2015}
 }
 
+
 @article{GPSforIndoor,
   title={Indoor Positioning Based on Global Positioning System Signals},
   author={Kerem Ozsoy, Ayhan Bozkurt and Ibrahim Tekin},
@@ -83,7 +83,6 @@
   year={2013},
   publisher={}
 }
-
 
 
 @article{Carrera,
@@ -109,6 +108,17 @@
   publisher={}
 }
 
+@article{Carrera3,
+  title={A Real-time Indoor Tracking System in Smartphones},
+  author={J.L. Carrera V. et al.},
+  journal={},
+  volume={},
+  number={},
+  pages={},
+  year={2016},
+  publisher={\url{http://dx.doi.org/10.1145/2988287.2989142}},
+}
+
 @article{Markov,
   title={Markov localization for mobile robots in dynamic environments},
   author={F. Dieter W. Burgard and S. Thrun},
@@ -130,6 +140,38 @@
   year={1973},
   publisher={}
 }
+
+
+
+@article{KStar,
+  title={An instance-based learner using an entropic distance measure},
+  author={G. Cleary and E.Trigg},
+  journal={12th International Conference on Machine Learning},
+  volume={},
+  number={},
+  pages={108-114},
+  year={1995},
+  publisher={}
+}
+
+
+@misc{MLP,
+  title = {{D.WEKA} Class multilayerperceptron},
+  howpublished = {\url{http://weka.sourceforge.net/doc.dev/}},
+  note = {Accessed: 2018-03-01}
+}
+
+@article{J48,
+  title={Programs for Machine Learning},
+  author={R.Quinlan},
+  journal={San Mateo CA Morgan Kaufmann Publishers},
+  volume={},
+  number={},
+  pages={},
+  year={1993},
+  publisher={}
+}
+
 
 
 @article{Reference1,
