--- a/thesis.tex
+++ b/thesis.tex
@@ -223,6 +223,7 @@ The acknowledgments and the people to thank go here, don't forget to include you
 \textbf{MF} & \textbf{M}agnetic \textbf{F}ield\\
 \textbf{MHz} & \textbf{M}ega\textbf{H}ert\textbf{Z}\\
 \textbf{ML} & \textbf{M}achine \textbf{L}earning\\
+\textbf{MLP} & \textbf{M}ulti \textbf{L}ayer \textbf{P}erceptron\\
 \textbf{M2M} & \textbf{M}achine \textbf{2}(to) \textbf{M}achine\\
 \textbf{OS} & \textbf{O}perating \textbf{S}ystem\\
 \textbf{PRF} & \textbf{P}ulse \textbf{R}epetition \textbf{F}requency\\
@@ -234,7 +235,7 @@ The acknowledgments and the people to thank go here, don't forget to include you
 \textbf{TDOA} & \textbf{T}ime \textbf{D}ifference \textbf{O}f \textbf{A}rrival \\
 \textbf{ToF} & \textbf{T}ime \textbf{o}f \textbf{F}light\\
 \textbf{TWR} & \textbf{T}wo \textbf{W}ay \textbf{R}anging\\
-\textbf{UDP} & \textbf{U}ser \textbf{D}atagram\textbf{P}rotocol\\
+\textbf{UDP} & \textbf{U}ser \textbf{D}atagram \textbf{P}rotocol\\
 \textbf{UWB} & \textbf{U}ltra \textbf{W}ide\textbf{B}and\\
 
 
