Appendix A added with all figures of trajectories. Refactoring of all parts except for 4.5 Experiments.

--- a/Appendices/AppendixA.tex
+++ b/Appendices/AppendixA.tex
@@ -1,25 +1,41 @@
 % Appendix A
 
-\chapter{Frequently Asked Questions} % Main appendix title
+\chapter{Trajectories} % Main appendix title
 
 \label{AppendixA} % For referencing this appendix elsewhere, use \ref{AppendixA}
 
-\section{How do I change the colors of links?}
+\section{Figures of the trajectories used in the experiments}
 
-The color of links can be changed to your liking using:
+\begin{figure}[th]
+\centering
+\includegraphics[width=1.0\textwidth]{Figures/trajectory1}
+\decoRule
+\caption[Trajectory 1]{Checkpoints and path of trajectory 1.}
+\label{fig:trajectory1Appendix}
+\end{figure}
 
-{\small\verb!\hypersetup{urlcolor=red}!}, or
+\begin{figure}[th]
+\centering
+\includegraphics[width=1.0\textwidth]{Figures/trajectory2}
+\decoRule
+\caption[Trajectory 2]{Checkpoints and path of trajectory 2.}
+\label{fig:trajectory2}
+\end{figure}
 
-{\small\verb!\hypersetup{citecolor=green}!}, or
 
-{\small\verb!\hypersetup{allcolor=blue}!}.
+\begin{figure}[th]
+\centering
+\includegraphics[width=1.0\textwidth]{Figures/trajectory3}
+\decoRule
+\caption[Trajectory 3]{Checkpoints and path of trajectory 3.}
+\label{fig:trajectory3}
+\end{figure}
 
-\noindent If you want to completely hide the links, you can use:
 
-{\small\verb!\hypersetup{allcolors=.}!}, or even better: 
-
-{\small\verb!\hypersetup{hidelinks}!}.
-
-\noindent If you want to have obvious links in the PDF but not the printed text, use:
-
-{\small\verb!\hypersetup{colorlinks=false}!}.
+\begin{figure}[th]
+\centering
+\includegraphics[width=1.0\textwidth]{Figures/trajectory4}
+\decoRule
+\caption[Trajectory 4]{Checkpoints and path of trajectory 4.}
+\label{fig:trajectory4}
+\end{figure}
