Add experiment setup of trajectory 5 with improved anchors.

--- a/Appendices/AppendixA.tex
+++ b/Appendices/AppendixA.tex
@@ -39,3 +39,11 @@
 \caption[Trajectory 4]{Checkpoints and path of trajectory 4.}
 \label{fig:trajectory4}
 \end{figure}
+
+\begin{figure}[th]
+\centering
+\includegraphics[width=1.0\textwidth]{Figures/trajectory5_withAnchors}
+\decoRule
+\caption[Trajectory 5]{Checkpoints and path of trajectory 5 with anchor positions.}
+\label{fig:trajectory5_withAnchorsAppendix}
+\end{figure}
