Machine learning sources added. Changed structure with adding chap 6. Added calibration.

--- a/example.bib
+++ b/example.bib
@@ -1,45 +1,72 @@
 @misc{Gartner,
-  title = {{Gartner} Gartner Says Worldwide Sales of Smartphones Returned to Growth in First Quarter of 2018},
+  title = {{Gartner:} Gartner Says Worldwide Sales of Smartphones Returned to Growth in First Quarter of 2018},
   howpublished = {\url{https://www.gartner.com/newsroom/id/3876865}},
   note = {Accessed: 2018-07-18},
   number = {1}
 }
 
 @misc{Statista,
-  title = {{Statista} Internet of Things - number of connected devices worldwide 2015-2025},
+  title = {{Statista:} Internet of Things - number of connected devices worldwide 2015-2025},
   howpublished = {\url{https://www.statista.com/statistics/471264/iot-number-of-connected-devices-worldwide/}},
   note = {Accessed: 2018-07-19}
 }
 
 @misc{SewioTWR,
-  title = {{SewioTWR} UWB Technology - Two way ranging},
+  title = {{Sewio:} UWB Technology - Two way ranging},
   howpublished = {\url{https://www.sewio.net/technology/two-way-ranging/}},
   note = {Accessed: 2018-07-23}
 }
 
 @misc{SewioTDOA,
-  title = {{SewioTDOA} UWB Technology - Time difference of arrival},
+  title = {{Sewio:} UWB Technology - Time difference of arrival},
   howpublished = {\url{https://www.sewio.net/technology/time-difference-of-arrival/}},
   note = {Accessed: 2018-07-23}
 }
 
 @misc{Raspberry,
-  title = {{Raspberry Pi} Symmetrical double-sided two-way ranging},
+  title = {{Raspberry Pi:} Product specification},
   howpublished = {\url{https://www.raspberrypi.org/products/raspberry-pi-3-model-b/}},
   note = {Accessed: 2018-07-31}
 }
 
 @misc{Uniset,
-  title = {{UNISET company} Intelligent sensor technology},
+  title = {{UNISET company:} Intelligent sensor technology},
   howpublished = {\url{http://www.unisetcompany.com}},
   note = {Accessed: 2018-07-31}
 }
 
 @misc{Wikipedia,
-  title = {{Wikipedia} Symmetrical double-sided two-way ranging},
+  title = {{Wikipedia:} Symmetrical double-sided two-way ranging},
   howpublished = {\url{https://en.wikipedia.org/wiki/Symmetrical_double-sided_two-way_ranging}},
   note = {Accessed: 2018-07-24}
 }
+
+@misc{WikiGini,
+  title = {{Wikipedia:} Decision tree learning},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Decision_tree_learning}},
+  note = {Accessed: 2018-09-05}
+}
+
+@misc{SKLearn,
+  title = {{Scikit-learn:} Ensemble methods},
+  howpublished = {\url{http://scikit-learn.org/stable/modules/ensemble.html}},
+  note = {Accessed: 2018-09-05}
+}
+
+@misc{GaussianNB,
+  title = {{Gaussian naive bayes:} Naive Bayes documentation},
+  howpublished = {\url{http://scikit-learn.org/stable/modules/naive_bayes.html}},
+  note = {Accessed: 2018-09-05}
+}
+
+
+@misc{KNN,
+  title = {{K neighbors classifier:} K nearest neighbors classifier documentation},
+  howpublished = {\url{http://scikit-learn.org/stable/modules/neighbors.html}},
+  note = {Accessed: 2018-09-05}
+}
+
+
 
 @misc{Beginnersguide,
   title = {{SEQUITUR InGPS Lite} Beginners Guide and Application Examples},
@@ -67,9 +94,9 @@
 
 
 @misc{VorlesungCN,
-  title = {{Computernetze} Vorlesungsunterlagen Uebertragungsmedien},
+  title = {{Vorlesung Computernetze UniBe:} Vorlesungsunterlagen Uebertragungsmedien},
   howpublished = {},
-  note = {HS: 2015}
+  note = {Herbstsemester: 2015}
 }
 
 
@@ -127,48 +154,6 @@
   number={1},
   pages={391-427},
   year={1999},
-  publisher={}
-}
-
-@article{Viterbi,
-  title={The viterbi algorithm},
-  author={G. Forney},
-  journal={Proceedings of the IEEE},
-  volume={61},
-  number={},
-  pages={268-278},
-  year={1973},
-  publisher={}
-}
-
-
-
-@article{KStar,
-  title={An instance-based learner using an entropic distance measure},
-  author={G. Cleary and E.Trigg},
-  journal={12th International Conference on Machine Learning},
-  volume={},
-  number={},
-  pages={108-114},
-  year={1995},
-  publisher={}
-}
-
-
-@misc{MLP,
-  title = {{D.WEKA} Class multilayerperceptron},
-  howpublished = {\url{http://weka.sourceforge.net/doc.dev/}},
-  note = {Accessed: 2018-03-01}
-}
-
-@article{J48,
-  title={Programs for Machine Learning},
-  author={R.Quinlan},
-  journal={San Mateo CA Morgan Kaufmann Publishers},
-  volume={},
-  number={},
-  pages={},
-  year={1993},
   publisher={}
 }
 
