--- a/thesis.tex
+++ b/thesis.tex
@@ -195,16 +195,15 @@ The Thesis Abstract is written here (and usually kept to just this page). The pa
 \textbf{GHz} & \textbf{G}iga\textbf{H}ert\textbf{Z}\\
 \textbf{GPIO} & \textbf{G}eneral \textbf{P}urpose \textbf{I}nput \textbf{O}utput\\
 \textbf{GPS} & \textbf{G}lobal \textbf{P}ositioning \textbf{S}ystem\\
-\textbf{HMM} & \textbf{H}idden \textbf{M}arkov \textbf{M}odel\\
 \textbf{IMU} & \textbf{I}nertial \textbf{M}easurement \textbf{U}nits\\
 \textbf{IoT} & \textbf{I}nternet \textbf{o}f \textbf{T}hings\\
 \textbf{kbps} & \textbf{k}ilo \textbf{b}it \textbf{p}er \textbf{s}econd\\
+\textbf{KNN} & \textbf{K} \textbf {N}earest \textbf{N}eighbor\\
 \textbf{Mbps} & \textbf{M}ega \textbf{b}it \textbf{p}er \textbf{s}econd\\
 \textbf{MCL} & \textbf{M}onte \textbf{C}arlo \textbf{L}ocalization\\
 \textbf{MF} & \textbf{M}agnetic \textbf{F}ield\\
 \textbf{MHz} & \textbf{M}ega\textbf{H}ert\textbf{Z}\\
 \textbf{ML} & \textbf{M}achine \textbf{L}earning\\
-\textbf{MLP} & \textbf{M}ulti \textbf{L}ayer \textbf{P}erceptron\\
 \textbf{M2M} & \textbf{M}achine \textbf{2}(to) \textbf{M}achine\\
 \textbf{OS} & \textbf{O}perating \textbf{S}ystem\\
 \textbf{PRF} & \textbf{P}ulse \textbf{R}epetition \textbf{F}requency\\
@@ -237,7 +236,8 @@ The Thesis Abstract is written here (and usually kept to just this page). The pa
 \include{Chapters/Chapter2} 
 \include{Chapters/Chapter3}
 \include{Chapters/Chapter4} 
-\include{Chapters/Chapter5} 
+\include{Chapters/Chapter5}
+\include{Chapters/Chapter6}
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - APPENDICES
