First complete Version.

--- a/example.bib
+++ b/example.bib
@@ -69,27 +69,24 @@
 
 
 @misc{Beginnersguide,
-  title = {{SEQUITUR InGPS Lite} Beginners Guide and Application Examples},
-  howpublished = {SeqInGPSLite BeginnersGuide R1 2 pdf},
-  note = {No note}
+  title = {{SEQUITUR InGPS Lite:} Beginners Guide and Application Examples},
+  howpublished = {SeqInGPSLite BeginnersGuide\_R1\_2.pdf}
 }
 
 @misc{Usermanual,
-  title = {{SEQUITUR InGPS Lite} User Manual and Application Programming Interface},
-  howpublished = {SeqInGPSLite UserManual R1 1 pdf},
-  note = {No note}
+  title = {{SEQUITUR InGPS Lite:} User Manual and Application Programming Interface},
+  howpublished = {SeqInGPSLite UserManual\_R1\_1.pdf}
 }
 
 @article{thales,
   title={The Thales experiment},
   author={Richard Kerner},
-  journal={},
-  volume={11},
-  number={3},
+  journal={\url{https://arxiv.org/pdf/1712.06016.pdf}},
+  volume={},
+  number={},
   pages={1-2},
   year={2017},
   publisher={Université Paris-VI},
-  Url ={https://arxiv.org/pdf/1712.06016.pdf}
 }
 
 
@@ -103,9 +100,9 @@
 @article{GPSforIndoor,
   title={Indoor Positioning Based on Global Positioning System Signals},
   author={Kerem Ozsoy, Ayhan Bozkurt and Ibrahim Tekin},
-  journal={},
-  volume={11},
-  number={2},
+  journal={\url{https://onlinelibrary.wiley.com/doi/abs/10.1002/mop.27520}},
+  volume={},
+  number={},
   pages={},
   year={2013},
   publisher={}
@@ -127,7 +124,7 @@
 @article{Carrera2,
   title={room recognition using discriminative ensemble learning with hidden markov models for smartphones},
   author={J.L. Carrera V. et al.},
-  journal={},
+  journal={\url{https://arxiv.org/abs/1804.09005}},
   volume={},
   number={},
   pages={},
@@ -138,7 +135,7 @@
 @article{Carrera3,
   title={A Real-time Indoor Tracking System in Smartphones},
   author={J.L. Carrera V. et al.},
-  journal={},
+  journal={\url{http://dx.doi.org/10.1145/2988287.2989142}},
   volume={},
   number={},
   pages={},
