--- a/thesis.tex
+++ b/thesis.tex
@@ -169,7 +169,7 @@ headsepline, % Uncomment to get a line under the header
 
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
-The Thesis Abstract is written here (and usually kept to just this page). The page is kept centered vertically so can expand into the blank space above the title too\ldots
+The number of mobile applications as well as the number of mobile devices is growing continously, which led to more and more interest in the research field of indoor positioning. Many indoor localization solutions rely on common radio signal strength indication or on Inertial Measurement Units (IMU). In this work we present an alternative indoor positioning algorithm based on time of flight measurements of ultra wideband (UWB) signals. In addition, our particle filter approach fuses IMU measurements, floor plan information and WiFi/UWB signal strength fingerprinting, to achieve a high accuracy indoor localization. We evaluated our system, running on Raspberry Pi devices equipped with SEQUITUR Lite UWB transmitters, in complex test scenarios performed in a real indoor environment. Moreover, we compared our system to the commercial indoor localization system SEQUITUR InGPS Lite, distributed by UNISET company. Results show that our algorithm could achieve an average tracking error of 0.45m and a 90\% accuracy of 0.87m. Thus, it can keep up with the SEQUITUR InGPS Lite system and outperforms previous signal strength implementations, which makes it highly promising for future research.
 \end{abstract}
 
 %----------------------------------------------------------------------------------------
@@ -233,7 +233,7 @@ The Thesis Abstract is written here (and usually kept to just this page). The pa
 % Uncomment the lines as you write the chapters
 
 \include{Chapters/Chapter1}
-\include{Chapters/Chapter2} 
+\include{Chapters/Chapter2}
 \include{Chapters/Chapter3}
 \include{Chapters/Chapter4} 
 \include{Chapters/Chapter5}
